fix: align page

--- a/webdev/css/styles.css
+++ b/webdev/css/styles.css
@@ -11,6 +11,7 @@ body {
 
     /*Visual*/
     background-color: #ffffff;
+    margin: 0px auto;
 }
     /*First Screen image wraper*/
 
